# apiframe-hs

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  apiframe-hs.cabal  flake.nix
.claude/: settings.local.json
app/: Main.hs
src/Web/Apiframe/: API.hs  Client.hs  Internal.hs  Types.hs
test/: Spec.hs
